java/java-tests/testData/psi/parser-full/declarationParsing/method/Errors1.java

<error descr="Modifier 'private' not allowed here">private</error> 
<error descr="Modifier 'static' not allowed here">static</error>
<error descr="Modifier 'volatile' not allowed here">volatile</error>
class a {
}